fix: center text on mobile view

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1453,6 +1453,10 @@ video {
     padding-top: 5rem;
   }
 
+  .lg\:text-left {
+    text-align: left;
+  }
+
   .lg\:text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
